tests/fixtures/invalid/str_div_int.py
# Cannot divide Str and Int
x: float = "hello" / 1
